2015-09-30  François  <francois@dechelle.net>

	* added lib/os/io.h and lib/os/string.h for definition of platform abstraction macros related to I/O (read/write/close) and strings (strdup)

	* isolated platform specific calls for IPC in os/ipc.h and os/linux/ipc.c

2015-09-29  François  <francois@dechelle.net>

	* isolated calls to libmagic in a OS-specific function (os/mimetype.h, os/linux/mimetype.c); tested

2015-09-28  François  <francois@dechelle.net>

	* fixed bugs in directory traversal in os/linux/dir.c (exiting too early if error, invalid errno passed to callback)

	* moved dir.h to os/dir.h, dir.c to os/linux/dir.c; some cleanup; rewriten directory walking with glib by calls to os_dir_map

2015-09-24  François  <francois@dechelle.net>

	* added #include "libuhuru-config.h" in all C files

	* moved config include files to include/config; added stuff to have win32 config and autoconf generated config

2015-09-16  François  <francois@dechelle.net>

	* fixed wrong month in alert XML

2015-09-09  François  <francois@dechelle.net>

	* implemented info using IPC for remote scan daemon; tested with uhuru-info --xml

	* changed structure uhuru_info & co to drop use of struct tm and have a string containing UTC datetime in ISO 8601 format

2015-09-07  François  <francois@dechelle.net>

	* going on with uhuru_info implementation; compiles ok

2015-09-04  François  <francois@dechelle.net>

	* changed module API for module information: moved structure out of struct uhuru_module, to allow IPC calls without the filled module structure

2015-09-02  François  <francois@dechelle.net>

	* changed date field to use a struct tm instead of a string; clamav datetime parsing nightmare...

	* added first implementation of base information query for modules; tested for clamav

2015-09-01  François  <francois@dechelle.net>

	* tested and debugged new binary IPC; uhuru-scan works ok

2015-08-31  François  <francois@dechelle.net>
